# Discord-Bot

./: .breakpoints  keep_alive.py  main.py  pyproject.toml  readme.md  slurs_to_ban.txt  wyr.py
cogs/: ai_cog.py  anon_cog.py  cool_cog.py  games_cog.py  lyrics_cog.py  parik_tweets.py  ping_yin_cog.py  random_cog.py  stocks_cog.py  ticker_list.py  wiki_cog.py  wyr.py  wyr_cog.py
