[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
python-dotenv = "^0.15.0"
flask = "^1.1.2"
wang-test = "^1.0.0"
markdown = "^3.3.4"
replit = "^2.0.0"
bs4 = "^0.0.1"
selenium = "^3.141.0"
fake-useragent = "^0.1.11"
discord-components = "^1.1.2"
cryptocode = "^0.1"
discord-py-slash-command = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
